src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT003.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    ExtraneousScopeFunction: ~
  location:
    row: 14
    column: 16
  end_location:
    row: 14
    column: 32
  fix: ~
  parent: ~

