src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT004.snap
---
source: src/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    MissingFixtureNameUnderscore: patch_something
  location:
    row: 51
    column: 0
  end_location:
    row: 52
    column: 30
  fix:
    content: _
    location:
      row: 51
      column: 4
    end_location:
      row: 51
      column: 4
  parent: ~
- kind:
    MissingFixtureNameUnderscore: activate_context
  location:
    row: 56
    column: 0
  end_location:
    row: 58
    column: 13
  fix:
    content: _
    location:
      row: 56
      column: 4
    end_location:
      row: 56
      column: 4
  parent: ~

