src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT005.snap
---
source: src/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    IncorrectFixtureNameUnderscore: _my_fixture
  location:
    row: 41
    column: 0
  end_location:
    row: 42
    column: 12
  fix:
    content: ""
    location:
      row: 41
      column: 4
    end_location:
      row: 41
      column: 5
  parent: ~
- kind:
    IncorrectFixtureNameUnderscore: _activate_context
  location:
    row: 46
    column: 0
  end_location:
    row: 48
    column: 21
  fix:
    content: ""
    location:
      row: 46
      column: 4
    end_location:
      row: 46
      column: 5
  parent: ~
- kind:
    IncorrectFixtureNameUnderscore: _activate_context
  location:
    row: 52
    column: 0
  end_location:
    row: 57
    column: 34
  fix:
    content: ""
    location:
      row: 52
      column: 4
    end_location:
      row: 52
      column: 5
  parent: ~

