src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT006_list.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    ParametrizeNamesWrongType: list
  location:
    row: 9
    column: 25
  end_location:
    row: 9
    column: 40
  fix:
    content: "[\"param1\", \"param2\"]"
    location:
      row: 9
      column: 25
    end_location:
      row: 9
      column: 40
  parent: ~
- kind:
    ParametrizeNamesWrongType: list
  location:
    row: 14
    column: 25
  end_location:
    row: 14
    column: 56
  fix:
    content: "[\"param1\", \"param2\"]"
    location:
      row: 14
      column: 25
    end_location:
      row: 14
      column: 56
  parent: ~
- kind:
    ParametrizeNamesWrongType: list
  location:
    row: 19
    column: 25
  end_location:
    row: 19
    column: 45
  fix: ~
  parent: ~
- kind:
    ParametrizeNamesWrongType: csv
  location:
    row: 24
    column: 25
  end_location:
    row: 24
    column: 36
  fix:
    content: "\"param1\""
    location:
      row: 24
      column: 25
    end_location:
      row: 24
      column: 36
  parent: ~
- kind:
    ParametrizeNamesWrongType: csv
  location:
    row: 34
    column: 25
  end_location:
    row: 34
    column: 35
  fix:
    content: "\"param1\""
    location:
      row: 34
      column: 25
    end_location:
      row: 34
      column: 35
  parent: ~

