src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT007_list_of_lists.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    ParametrizeValuesWrongType:
      - list
      - list
  location:
    row: 4
    column: 34
  end_location:
    row: 4
    column: 40
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - list
  location:
    row: 11
    column: 4
  end_location:
    row: 14
    column: 5
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - list
  location:
    row: 12
    column: 8
  end_location:
    row: 12
    column: 14
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - list
  location:
    row: 13
    column: 8
  end_location:
    row: 13
    column: 14
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - list
  location:
    row: 22
    column: 4
  end_location:
    row: 25
    column: 5
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - list
  location:
    row: 39
    column: 8
  end_location:
    row: 39
    column: 14
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - list
  location:
    row: 40
    column: 8
  end_location:
    row: 40
    column: 14
  fix: ~
  parent: ~

