src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT007_list_of_tuples.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    ParametrizeValuesWrongType:
      - list
      - tuple
  location:
    row: 4
    column: 34
  end_location:
    row: 4
    column: 40
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - tuple
  location:
    row: 11
    column: 4
  end_location:
    row: 14
    column: 5
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - tuple
  location:
    row: 22
    column: 4
  end_location:
    row: 25
    column: 5
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - tuple
  location:
    row: 23
    column: 8
  end_location:
    row: 23
    column: 14
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - tuple
  location:
    row: 24
    column: 8
  end_location:
    row: 24
    column: 14
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - tuple
  location:
    row: 50
    column: 8
  end_location:
    row: 50
    column: 14
  fix: ~
  parent: ~
- kind:
    ParametrizeValuesWrongType:
      - list
      - tuple
  location:
    row: 51
    column: 8
  end_location:
    row: 51
    column: 14
  fix: ~
  parent: ~

