src/flake8_pytest_style/snapshots/ruff__flake8_pytest_style__tests__PT008.snap
---
source: src/flake8_pytest_style/mod.rs
expression: checks
---
- kind:
    PatchWithLambda: ~
  location:
    row: 35
    column: 0
  end_location:
    row: 35
    column: 12
  fix: ~
  parent: ~
- kind:
    PatchWithLambda: ~
  location:
    row: 36
    column: 0
  end_location:
    row: 36
    column: 19
  fix: ~
  parent: ~
- kind:
    PatchWithLambda: ~
  location:
    row: 37
    column: 0
  end_location:
    row: 37
    column: 19
  fix: ~
  parent: ~
- kind:
    PatchWithLambda: ~
  location:
    row: 38
    column: 0
  end_location:
    row: 38
    column: 26
  fix: ~
  parent: ~
- kind:
    PatchWithLambda: ~
  location:
    row: 40
    column: 0
  end_location:
    row: 40
    column: 12
  fix: ~
  parent: ~
- kind:
    PatchWithLambda: ~
  location:
    row: 41
    column: 0
  end_location:
    row: 41
    column: 19
  fix: ~
  parent: ~
- kind:
    PatchWithLambda: ~
  location:
    row: 42
    column: 0
  end_location:
    row: 42
    column: 19
  fix: ~
  parent: ~
- kind:
    PatchWithLambda: ~
  location:
    row: 43
    column: 0
  end_location:
    row: 43
    column: 26
  fix: ~
  parent: ~
- kind:
    PatchWithLambda: ~
  location:
    row: 45
    column: 0
  end_location:
    row: 45
    column: 12
  fix: ~
  parent: ~
- kind:
    PatchWithLambda: ~
  location:
    row: 46
    column: 0
  end_location:
    row: 46
    column: 19
  fix: ~
  parent: ~
- kind:
    PatchWithLambda: ~
  location:
    row: 47
    column: 0
  end_location:
    row: 47
    column: 19
  fix: ~
  parent: ~
- kind:
    PatchWithLambda: ~
  location:
    row: 48
    column: 0
  end_location:
    row: 48
    column: 26
  fix: ~
  parent: ~

